# fd-ruvector-marshal

./: .gitignore  Cargo.toml  Questions.txt  README.md  build-errors.txt
.github/workflows/: build-native.yml
config/caddy/: Caddyfile  Caddyfile.authenticated
crates/goal-rag/: Cargo.toml  config.toml
crates/goal-rag/frontend/: index.html  package.json
crates/goal-rag/frontend/src/: App.tsx  index.css
crates/goal-rag/src/: config.rs  error.rs  lib.rs
crates/goal-rag/src/embeddings/: onnx_embedder.rs
crates/goal-rag/src/generation/: prompt.rs
crates/goal-rag/src/ingestion/: external_parser.rs  mod.rs  parser.rs
crates/goal-rag/src/learning/: answer_cache.rs  mod.rs
crates/goal-rag/src/processing/: file_tier.rs  job_queue.rs  mod.rs  worker.rs
crates/goal-rag/src/providers/: document_store.rs  llm.rs  local.rs  mod.rs  ollama.rs  (+1 more)
crates/router-cli/: Cargo.toml
crates/router-ffi/: Cargo.toml
crates/router-wasm/: Cargo.toml
crates/ruvector-bench/: Cargo.toml
crates/ruvector-bench/src/: lib.rs
crates/ruvector-cli/: Cargo.toml
crates/ruvector-cli/src/: config.rs
crates/ruvector-core/: Cargo.toml
crates/ruvector-core/src/: lib.rs  storage.rs  storage_memory.rs  vector_db.rs
crates/ruvector-node/: Cargo.toml
crates/ruvector-node/src/: lib.rs
crates/ruvector-rag/: Cargo.toml
crates/ruvector-rag/frontend/src/api/: client.ts  types.ts
crates/ruvector-rag/frontend/src/components/: ChatInterface.tsx  CitationCard.tsx
crates/ruvector-rag/src/: config.rs  lib.rs
crates/ruvector-rag/src/generation/: citation.rs  ollama.rs  prompt.rs
crates/ruvector-rag/src/ingestion/: chunker.rs  external_parser.rs  mod.rs  parser.rs
crates/ruvector-rag/src/processing/: job_queue.rs  mod.rs  worker.rs
crates/ruvector-rag/src/retrieval/: search.rs
crates/ruvector-rag/src/server/: mod.rs  state.rs
crates/ruvector-rag/src/server/routes/: ingest.rs  jobs.rs  mod.rs  query.rs
crates/ruvector-rag/src/types/: document.rs  query.rs  response.rs
crates/ruvector-wasm/: Cargo.toml
examples/kuiper_belt/: agenticdb_analysis.rs  kbo_data.rs  kuiper_cluster.rs  main.rs  mod.rs  standalone_analysis.rs
npm/core/: package.json
plans/claude-flow-v3/: 01-specification.md  02-pseudocode.md  03-architecture.md  04-refinement.md  05-completion.md  06-roadmap.md  07-gap-analysis.md  08-addendum-missing-features.md  README.md
scripts/: README.md
scripts/deploy/: clean-vm.sh  deploy-vm.sh  setup-authenticated-https.sh  setup-https.sh
(+24 files in other folders)
